# docParse

./: .env.example  .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml
src/docparse/: __init__.py  cli.py  client.py  config.py  main.py  models.py  ocr_service.py
src/docparse/providers/: __init__.py  base_provider.py  openai_provider.py  siliconflow_provider.py
